// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package cr_audit_commits.configpb;

option go_package = "infra/appengine/cr-audit-commits/app/proto;configpb";

// The proto definitions are based on struct definitions in
// https://source.chromium.org/chromium/infra/infra/+/master:go/src/infra/appengine/cr-audit-commits/app/rules/

message Config {
    map<string, RefConfig> ref_configs = 1;
}

message RefConfig {
    string gerrit_host = 1;
    string gerrit_repo = 2;
    string ref = 3;
    string starting_commit = 4;
    string monorail_project = 5;
    bool use_dynamic_ref_func = 6;

    // Used for unpausing a ref. Oncall should modify this configuration
    // to help resume the scanning.
    string overwrite_last_known_commit = 7;

    map<string, AccountRules> rules = 8;
}

message AccountRules {
    string account = 1;
    repeated Rule rules = 2;
    repeated Notification notifications = 3;
}

message Rule {
    oneof rule {
        AcknowledgeMerge acknowledge_merge = 1;
        AutoCommitsPerDay auto_commits_per_day = 2;
        AutoRevertsPerDay auto_reverts_per_day = 3;
        ChangeReviewed change_reviewed = 4;
        CulpritAge culprit_age = 5;
        CulpritInBuild culprit_in_build = 6;
        FailedBuildIsAppropriateFailure failed_build_is_appropriate_failure = 7;
        OnlyCommitsOwnChange only_commits_own_change = 8;
        OnlyMergeApprovedChange only_merge_approved_change = 9;
        OnlyModifiesFilesAndDirsRule only_modifies_files_and_dirs_rule = 10;
        RevertOfCulprit revert_of_culprit = 11;
    }
}

message AcknowledgeMerge {}

message AutoCommitsPerDay {}

message AutoRevertsPerDay {}

message ChangeReviewed {
    repeated string robots = 1;
}

message CulpritAge {}

message CulpritInBuild {}

message FailedBuildIsAppropriateFailure {}

message OnlyCommitsOwnChange {}

message OnlyMergeApprovedChange {
    // AllowedUsers is the list of users who are allowed to author and commit
	// merges.
    repeated string allowed_users = 1;

    // AllowedRobots is the list of robot accounts who are allowed to author
	// merges.
    repeated string allowed_robots = 2;
}

message OnlyModifiesFilesAndDirsRule {
    string name = 1;
    repeated string files = 2;
    repeated string dirs = 3;
}

message RevertOfCulprit {}

message Notification {
    oneof notification {
        CommentOnBugToAcknowledgeMerge comment_on_bug_to_acknowledge_merge = 1;
        CommentOrFileMonorailIssue comment_or_file_monorail_issue = 2;
        FileBugForMergeApprovalViolation file_bug_for_merge_approval_violation = 3;
    }
}

message CommentOnBugToAcknowledgeMerge {}

message CommentOrFileMonorailIssue {
    repeated string components = 1;
    repeated string labels = 2;
}

message FileBugForMergeApprovalViolation {
    repeated string components = 1;
    repeated string labels = 2;
}
